--- a/Webserver/design/header.html
+++ b/Webserver/design/header.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <head>
-    <style type="text/css">
-        body {
-            background: red;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/style.css" />
+    <script src="/scripts/jquery-3.4.1.js"></script>
+    <script src="/scripts/dummy.js"></script>
 </head>
 <body>
+    <div id="logo"><img src="/images/logo.png" /></div>
